Changed after second review
* Grid view was not updated after back on details view
* Toast if no network connection was found
* Up buton from detail made refresh on main

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,7 @@
 
     <!-- Key to movies info when passing around -->
     <string name="movieinfo_key" translatable="false">movieinfo</string>
+
+    <!-- No network connection -->
+    <string name="no_network_connection">No network connection</string>
 </resources>
